# Hydra

hydra/: .env.example  .gitignore  Dockerfile  LICENSE  MANIFEST.json  README.md  docker-compose.yml  gunicorn_conf.py  pyproject.toml  requirements.txt
hydra/.github/workflows/: ci.yml  e2e.yml
hydra/docs/: AGENTS.md  QUICKSTART.md  STRIDE.md
hydra/src/: cli.py
hydra/src/api/: endpoints.py  endpoints_ws.py  main.py
hydra/src/core/: banrate.py  cache.py  command_bus.py  config.py  history.py  http.py  shutdown.py  tracing.py  user_agents.py
hydra/src/database/: models.py  session.py
hydra/src/i18n/: __init__.py
hydra/src/p2p/: node.py  quic_tunnel.py
hydra/src/scripts/: package.py  release_check.py
hydra/src/tests/: test_api.py  test_banrate.py  test_cache.py  test_config.py  test_e2e.py  test_http_client.py  test_p2p_node.py
hydra/src/tests/e2e/: test_register_flow.py
hydra/src/workers/: account_generator.py  captcha_solver.py  email_aggregator.py  proxy_harvester.py
