[tool.poetry]
name = "hydra"
version = "0.1.0"
description = "Nieśmiertelny ekosystem AI"
authors = ["Pancio <pancio@example.com>"]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.111.0"
sqlalchemy = "^2.0.30"
asyncpg = "^0.30.0"
aiosqlite = "^0.21.0"
httpx = "^0.28.1"
websockets = "^15.0.1"
tenacity = "^9.1.2"
opentelemetry-sdk = "^1.34.1"
opentelemetry-exporter-otlp = "^1.34.1"
opentelemetry-instrumentation-fastapi = "^0.55b1"
pytest = "^8.2.1"
pytest-asyncio = "^1.0.0"
playwright = "^1.53.0"
typer = "^0.12.3"
aioredis = "^2.0.1"
babel = "^2.15.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
